# cpfphig

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  cpfphigConfig.in.cmake  cpfphig_config.cmake.in  fphig_config.cmake.in  melphig_config.cmake.in
src/: CMakeLists.txt  assert.c  assert.h  defer.c  defer.h  destroy_directory_list.c  destroy_directory_list.h  destroy_thread_pool.c  destroy_thread_pool.h  destroy_thread_pool_thread.c  destroy_thread_pool_thread.h  directory_list.h  fphig.c  free.c  free.h  library_load.h  library_sym.h  library_unload.h  list.h  list_copy.c  list_next.c  list_push.c  list_remove.c  list_shift.c  malloc.c  malloc.h  melphig.c  melphig.h  modules_load_all.c  modules_load_all.h  mutex.h  mutex_attr.h  mutex_destroy.h  mutex_init.h  mutex_lock.h  mutex_unlock.h  publisher.h  publisher_create.c  publisher_create.h  publisher_destroy.c  (+33 more)
src/cpfphig/: CMakeLists.txt  assert.c  assert.h  basename.h  binary_search_tree.h  binary_search_tree_copy_items_to_list.c  binary_search_tree_empty.c  binary_search_tree_find.c  binary_search_tree_find_all.c  binary_search_tree_find_tree.c  binary_search_tree_insert.c  binary_search_tree_merge.c  binary_search_tree_remove.c  cpfphig.c  cpfphig.h  defer.c  defer.h  destroy_directory_list.c  destroy_directory_list.h  destroy_thread_pool.c  destroy_thread_pool.h  destroy_thread_pool_thread.c  destroy_thread_pool_thread.h  directory_list.h  dirname.h  error_message_allocated_message.c  error_message_allocated_message.h  error_message_destroy_message.c  error_message_destroy_message.h  error_message_fprintf.c  error_message_fprintf.h  error_message_get_message.c  error_message_get_message.h  free.c  free.h  library_load.h  library_sym.h  library_unload.h  list.h  list_copy.c  (+56 more)
src/cpfphig/os/linux/: CMakeLists.txt  strnstr.c
src/cpfphig/os/nix/: CMakeLists.txt  basename.c  directory_list.c  dirname.c  library_load.c  library_sym.c  library_unload.c  mutex_destroy.c  mutex_init.c  mutex_lock.c  mutex_unlock.c  sleep.c  thread_cond_attr_destroy.c  thread_cond_attr_init.c  thread_cond_broadcast.c  thread_cond_destroy.c  thread_cond_init.c  thread_cond_signal.c  thread_cond_timed_wait.c  thread_cond_wait.c  thread_create.c  thread_exit.c  thread_join.c
src/cpfphig/os/unix/: strnstr.c
src/cpfphig/os/windows/: CMakeLists.txt  basename.c  directory_list.c  dirname.c  (+19 more)
src/fphig/: CMakeLists.txt  defer.c  defer.h  destroy_directory_list.c  destroy_directory_list.h  destroy_thread_pool.c  destroy_thread_pool.h  destroy_thread_pool_thread.c  destroy_thread_pool_thread.h  directory_list.h  fphig.h  free.h  library_load.h  library_unload.h  list.h  list_copy.c  list_next.c  list_push.c  list_remove.c  list_shift.c  malloc.h  modules_load_all.c  mutex.h  mutex_attr.h  mutex_destroy.h  mutex_init.h  mutex_lock.h  mutex_unlock.h  publisher.h  publisher_create.c  publisher_destroy.c  publisher_destroy.h  publisher_publish.c  publisher_publish.h  publisher_subscribe.c  publisher_unsubscribe.c  sleep.h  strnstr.h  subscription.h  thread.h  (+16 more)
src/fphig/os/: CMakeLists.txt
src/os/linux/: CMakeLists.txt  strnstr.c
src/os/nix/: CMakeLists.txt  directory_list.c  library_load.c  library_sym.c  library_unload.c  mutex_destroy.c  mutex_init.c  mutex_lock.c  mutex_unlock.c  sleep.c  thread_cond_attr_destroy.c  thread_cond_attr_init.c  thread_cond_broadcast.c  thread_cond_destroy.c  thread_cond_init.c  thread_cond_signal.c  thread_cond_timed_wait.c  thread_cond_wait.c  thread_create.c  thread_exit.c  thread_join.c
src/os/unix/: CMakeLists.txt  strnstr.c
test/: CMakeLists.txt
test/cpfphig/: CMakeLists.txt
test/cpfphig/mock/: CMakeLists.txt  destroy_directory_list_mock.h  free_mock.c  library_unload_mock.c  list_copy_mock.c  list_mock.h  list_next_mock.c  list_push_mock.c  list_shift_mock.c  malloc_mock.c
test/cpfphig/system/: CMakeLists.txt  defer_system_test.c  directory_list_system_test.c  library.c  library_system_test.c  mutex_system_test.c  publisher_subscribe_publish_destroy_system_test.c  thread_cond_broadcast_system_test.c  thread_cond_system_test.c  thread_pool_system_test.c  thread_system_test.c
test/cpfphig/unit/: CMakeLists.txt  binary_search_tree_copy_items_to_list_unit_test.c  binary_search_tree_empty_unit_test.c  binary_search_tree_find_all_unit_test.c  binary_search_tree_find_unit_test.c  binary_search_tree_insert_unit_test.c  binary_search_tree_merge_unit_test.c  binary_search_tree_remove_unit_test.c  cpfphig_unit_test.c  error_message_allocated_message_unit_test.c  error_message_fprintf_unit_test.c  free_unit_test.c  list_next_unit_test.c  list_push_unit_test.c  list_shift_unit_test.c  malloc_unit_test.c
test/fphig/: CMakeLists.txt
test/fphig/mock/: destroy_directory_list_mock.h  directory_list_mock.c  library_unload_mock.c  list_copy_mock.c  list_next_mock.c  list_push_mock.c  list_remove_mock.c  list_shift_mock.c  modules_load_all_mock.c
test/fphig/system/: CMakeLists.txt  defer_system_test.c  directory_list_system_test.c  mutex_system_test.c  publisher_subscribe_publish_destroy_system_test.c  thread_cond_broadcast_system_test.c  thread_cond_system_test.c  thread_pool_system_test.c  thread_system_test.c
test/fphig/unit/: CMakeLists.txt  free_unit_test.c  list_next_unit_test.c  list_push_unit_test.c  list_shift_unit_test.c  malloc_unit_test.c
test/mock/: CMakeLists.txt  destroy_directory_list_mock.c  destroy_directory_list_mock.h  directory_list_mock.c  fphig_mock.c  free_mock.c  library_unload_mock.c  list_copy_mock.c  list_mock.h  list_next_mock.c  list_push_mock.c  list_remove_mock.c  list_shift_mock.c  malloc_mock.c  melphig_mock.c  modules_load_all_mock.c  strnstr_mock.c
test/system/: CMakeLists.txt  defer_system_test.c  directory_list_system_test.c  mutex_system_test.c  publisher_subscribe_publish_destroy_system_test.c  thread_cond_broadcast_system_test.c  thread_cond_system_test.c  thread_pool_system_test.c  thread_system_test.c
test/unit/: CMakeLists.txt  free_unit_test.c  list_next_unit_test.c  list_push_unit_test.c  list_shift_unit_test.c  malloc_unit_test.c  melphig_unit_test.c
(+35 files in other folders)
